--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,19 @@ h1 {
     box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     display: none;
 }
+
+#gameOver {
+    width: 500px;
+    height: 200px;
+    background: linear-gradient(#F3CA6B, #F3706C);
+    color: white;
+    font-size: 2.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    top: 100px;
+    left: 40px;
+    padding: 50px;
+    z-index: 2;
+    display: none;
+}
